--- a/src/main/resources/static/css/default/menu.css
+++ b/src/main/resources/static/css/default/menu.css
@@ -1,6 +1,16 @@
 .menu-container {
     box-shadow: 0 5px 10px #d5d5d5;
-    padding: 10px;
+    padding: var(--default-gap);
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-container .flex-item {
+    display: flex;
+}
+
+.menu-container .flex-item > *:not(:last-of-type) {
+    margin-right: var(--default-gap);
 }
 
 .menu-container .menu {
@@ -8,10 +18,6 @@
     flex-direction: row;
 }
 
-.menu-container .menu .menu-item {
-    margin-right: 10px;
-}
-
-.menu-container .menu .menu-item:last-of-type {
-    margin-right: 0;
+.menu-container .menu .menu-item:not(:last-of-type) {
+    margin-right: var(--default-gap);
 }
